# kanbanize-sdk

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml
docs/: index.md
docs/api/: board_assignees.md  board_block_reasons.md  board_card_templates.md  board_card_types.md  board_custom_field_allowed_values.md  board_custom_field_default_contributors.md  board_custom_fields.md  board_discard_reasons.md  board_history.md  board_settings.md  board_stickers.md  board_structure.md  board_structure_revisions.md  board_tags.md  board_teams.md  board_visible_standard_fields.md  boards.md  cell_limits.md  columns.md  dataclasses.md  lane_section_limits.md  lanes.md  managed_workspaces.md  merged_areas.md  teams.md  users.md  workflows.md  workspace_history.md  workspace_managers.md  workspaces.md
kanbanize_sdk/: __init__.py  board_assignees.py  board_card_templates.py  board_card_types.py  board_custom_field_default_contributors.py  board_custom_fields.py  board_history.py  board_settings.py  board_stickers.py  board_structure.py  board_structure_revisions.py  board_struture_revisions.py  board_tags.py  board_teams.py  boards.py  cell_limits.py  client.py  columns.py  dataclasses.py  generics.py  lane_section_limits.py  lanes.py  managed_workspaces.py  merged_areas.py  teams.py  users.py  utils.py  workflows.py  workspace_history.py  workspace_managers.py  workspaces.py  wrapper.py
kanbanize_sdk/endpoints/: __init__.py  board_assignees.py  board_block_reasons.py  board_card_templates.py  board_card_types.py  board_child_parent_cards.py  board_custom_field_allowed_values.py  board_custom_field_default_contributors.py  board_custom_fields.py  board_discard_reasons.py  board_history.py  board_settings.py  board_stickers.py  board_structure.py  board_structure_revisions.py  board_tags.py  board_teams.py  board_visible_standard_fields.py  boards.py  cell_limits.py  columns.py  dashboard_pages.py  dashboard_pages_teams.py  dashboard_pages_users.py  dashboard_pages_workspaces.py  generics.py  lane_section_limits.py  lanes.py  managed_workspaces.py  merged_areas.py  teams.py  users.py  workflows.py  workspace_history.py  workspace_managers.py  workspaces.py
tests/: test_board_assignees.py  test_board_block_reasons.py  test_board_card_templates.py  test_board_card_types.py  test_board_custom_field_allowed_values.py  test_board_custom_field_default_contributors.py  test_board_custom_fields.py  test_board_discard_reasons.py  test_board_history.py  test_board_settings.py  test_board_stickers.py  test_board_structure.py  test_board_structure_revisions.py  test_board_tags.py  test_board_teams.py  test_board_visible_standard_fields.py  test_boards.py  test_cell_limits.py  test_columns.py  test_lane_section_limits.py  test_lanes.py  test_managed_workspace.py  test_managed_workspaces.py  test_merged_areas.py  test_teams.py  test_users.py  test_workflows.py  test_workspace_history.py  test_workspace_managers.py  test_workspaces.py
