[tool.poetry]
name = "kanbanize-sdk"
version = "0.2.11"
description = "Kanbanize-sdk is a python library for interacting with the official Kanbanize tool environment in version 2."
authors = ["darcivieira <darcivieira.junior@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "kanbanize_sdk"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Environment :: Plugins"

]

[tool.poetry.urls]
"Docs" = "https://kanbanize-sdk.readthedocs.io/en/latest/"
"GitHub" = "https://github.com/darcivieira/kanbanize-sdk/tree/main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
isort = "^5.12.0"
requests-mock = "^1.11.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.4.6"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"

[tool.pytest.ini_options]
markers = [
    "users",
    "teams",
    "boards",
    "board_settings",
    "board_structure",
    "board_structure_revisions",
    "board_history",
    "workspaces",
    "managed_workspaces",
    "workspace_managers",
    "workspaces_history",
    "workflows",
    "lanes",
    "columns",
    "cell_limits",
    "merged_areas",
    "lane_section_limits",
    "board_assignees",
    "board_block_reasons",
    "board_discard_reasons",
    "board_stickers",
    "board_tags",
    "board_card_templates",
    "board_card_types",
    "board_custom_fields",
    "board_custom_field_allowed_values",
    "board_custom_field_default_contributors",
    "board_visible_standard_fields",
    "board_teams",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
